--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.google.com/" />
-    <script>window.location.href="https://www.google.com/";</script>
+    <meta http-equiv="refresh" content="0; url=https://www.googvdle.com/" />
+    <script>window.location.href="https://www.googvdle.com/";</script>
     <title>Redirecting…</title>
   </head>
   <body>
-    Redirecting to <a href="https://www.google.com/">Google</a>…
+    Redirecting to <a href="https://www.googvdle.com/">Google</a>…
   </body>
 </html>
